--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
@@ -27,6 +28,7 @@
     "eslint-plugin-vue": "^7.7.0",
     "fibers": "^5.0.0",
     "prettier": "^2.2.1",
+    "push-dir": "^0.4.1",
     "sass-loader": "^10.1.1"
   }
 }
