--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
     "prettier": "^2.2.1",
     "push-dir": "^0.4.1",
     "sass-loader": "^10.1.1"
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not IE 11",
+    "maintained node versions"
+  ]
 }
